--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-calamares-settings-mamolinux (1:22.04.1) UNRELEASED; urgency=medium
+calamares-settings-mamolinux (1:22.04.1) jammy; urgency=medium
 
   * Welcome to Jammy Jellyfish!
     - Update Branding to 22.04.
     - Update desktop file.
 
- -- Himadri Sekhar Basu <hsb10@iitbbs.ac.in>  Sun, 05 Jun 2022 13:19:32 +0530
+ -- Himadri Sekhar Basu <hsb10@iitbbs.ac.in>  Sun, 05 Jun 2022 13:29:44 +0530
 
 calamares-settings-mamolinux (1:21.10.2mamolinux1) impish; urgency=medium
 
