--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+calamares-settings-mamolinux (1:22.04.1mamolinux1) jammy; urgency=medium
+
+  * Add netinstall configuration files (#2)
+    - Add/modify package names availble in ubuntu archives
+    - Fix displaymanager
+
+ -- Himadri Sekhar Basu <hsb10@iitbbs.ac.in>  Tue, 07 Jun 2022 10:50:28 +0530
+
 calamares-settings-mamolinux (1:22.04.1) jammy; urgency=medium
 
   * Welcome to Jammy Jellyfish!
