--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,99 @@
+calamares-settings-ubuntu (1:23.04.12) lunar; urgency=medium
+
+  * Don't allow the first user to be created with a blank password in either
+    Lubuntu or Ubuntu Studio. (LP: #2016436)
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Sun, 16 Apr 2023 17:34:56 -0500
+
+calamares-settings-ubuntu (1:23.04.11) lunar; urgency=medium
+
+  * Fixed an invalid "SidebarTextSelect" field in Lubuntu's branding.desc -
+    this is now called "SidebarTextCurrent".
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Mon, 20 Mar 2023 17:47:40 -0500
+
+calamares-settings-ubuntu (1:23.04.10) lunar; urgency=medium
+
+  * Fix Ubuntu Studio sidebar colors
+
+ -- Erich Eickmeyer <eeickmeyer@ubuntu.com>  Mon, 20 Mar 2023 11:49:08 -0700
+
+calamares-settings-ubuntu (1:23.04.9) lunar; urgency=medium
+
+  * Update ubuntustudio slideshow
+
+ -- Erich Eickmeyer <eeickmeyer@ubuntu.com>  Sat, 18 Mar 2023 08:46:57 -0700
+
+calamares-settings-ubuntu (1:23.04.8) lunar; urgency=medium
+
+  * Made the slideshow loop again. (Slow systems were ending up on the "The
+    installation should finish soon" screen when the installation was only 8%
+    done, and then were staying on that screen.)
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Thu, 16 Mar 2023 22:31:01 -0500
+
+calamares-settings-ubuntu (1:23.04.7) lunar; urgency=medium
+
+  * Updated copyright file.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Wed, 15 Mar 2023 03:53:07 -0500
+
+calamares-settings-ubuntu (1:23.04.6) lunar; urgency=medium
+
+  * Updated the lubuntu installer slideshow.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Mon, 13 Mar 2023 19:40:55 -0500
+
+calamares-settings-ubuntu (1:23.04.5) lunar; urgency=medium
+
+  * Ensure the langpacks for GNOME and KDE applications are installed too.
+    This increases the end user install by approximately 25 MB, and saves them
+    the trouble of having to hunt for it later.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Tue, 07 Mar 2023 13:16:32 -0700
+
+calamares-settings-ubuntu (1:23.04.4) lunar; urgency=medium
+
+  * Switch from using the lsb_release python module to the distro module, as
+    the python module for lsb_release no longer exists in Lunar.
+    (LP: #2008685)
+  * Bumped Standards-Version to 4.6.2, no changes necessary.
+  * Added an explicit Depends on python3-distro.
+  * Ran wrap-and-sort.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Tue, 28 Feb 2023 19:27:13 -0600
+
+calamares-settings-ubuntu (1:23.04.3) lunar; urgency=medium
+
+  * Fixed a syntax error that led to incorrect sidebar coloring (LP: #1991251).
+  * Set Calamares to launch in windowed mode, avoiding a welcome image scaling
+    issue.
+  * Updated Lintian overrides to work with Lintian again.
+  * Removed unnecessary Breaks lines from both calamares-settings-lubuntu and
+    calamares-settings-ubuntustudio. Conflicts is sufficient here.
+  * Fixed broken Lintian override in Lubuntu.
+  * Removed trailing whitespace from changelog.
+  * Bumped Standards-Version to 4.6.1, no changes necessary.
+  * Added 'Rules-Requires-Root: no'.
+  * Added Lintian overrides for missing manpages.
+  * Added Lintian overrides for direct usage of the dpkg database - this is
+    just log file extraction.
+  * Fixed changelog section for version 1:22.10.12.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Wed, 23 Nov 2022 16:08:10 -0600
+
+calamares-settings-ubuntu (1:23.04.2) lunar; urgency=medium
+
+  * Allow swap for Ubuntu Studio (LP: #1996646)
+
+ -- Erich Eickmeyer <eeickmeyer@ubuntu.com>  Tue, 15 Nov 2022 17:37:14 -0800
+
+calamares-settings-ubuntu (1:23.04.1) lunar; urgency=medium
+
+  * Welcome to the Lunar Lobster!
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 28 Oct 2022 14:26:09 -0500
+
 calamares-settings-mamolinux (1:22.04.4.3mamolinux2) stable; urgency=medium
 
   * Replace logo and icon with mamolinux icons (#9)
