--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,337 @@
+calamares-settings-ubuntu (1:24.04.39mamolinux1) noble; urgency=medium
+
+  * Prepare for noble (#25)
+  * Rebase modules and settings from lubuntu noble (#26)
+  * Rebase common scripts and settings from lubuntu (#27)
+  * Rebase oem scripts and settings from lubuntu noble (#28)
+  * Rebase and update debian packaging from lubuntu (#29)
+  * Update translation to noble (#30)
+
+ -- Himadri Sekhar Basu <hsb10@iitbbs.ac.in>  Sun, 02 Jun 2024 01:16:05 +0530
+
+calamares-settings-ubuntu (1:24.04.39) noble; urgency=medium
+
+  * Fix permissions on /home/oem when doing OEM installations. (LP: #2063403)
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Thu, 25 Apr 2024 00:01:37 -0500
+
+calamares-settings-ubuntu (1:24.04.38) noble; urgency=high
+
+  * Do not remove zram-config on Ubuntu Unity, it does not exist in the first
+    place (LP: #2063108).
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Mon, 22 Apr 2024 07:10:28 -0500
+
+calamares-settings-ubuntu (1:24.04.37) noble; urgency=medium
+
+  * Correctly lengthen timeouts for network and initramfs package commands.
+    (LP: #2060429)
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Fri, 19 Apr 2024 18:52:09 -0500
+
+calamares-settings-ubuntu (1:24.04.36) noble; urgency=medium
+
+  * Don't show Thunderbird as an installable third-party app on Kubuntu.
+    (LP: #2062438)
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Fri, 19 Apr 2024 17:38:06 -0500
+
+calamares-settings-ubuntu (1:24.04.35) noble; urgency=medium
+
+  * Remove timeouts for network-related package commands. (LP: #2062106)
+  * Remove timeouts for update-initramfs. (LP: #2060429) 
+
+ -- Walter Lapchynski <wxl@ubuntu.com>  Fri, 19 Apr 2024 21:23:54 +0000
+
+calamares-settings-ubuntu (1:24.04.34) noble; urgency=medium
+
+  * Add icon on Desktop to finish OEM install. (LP: #2060928) 
+
+ -- Walter Lapchynski <wxl@ubuntu.com>  Fri, 19 Apr 2024 19:18:59 +0000
+
+calamares-settings-ubuntu (1:24.04.33) noble; urgency=medium
+
+  * Fix slideshow image sizes for Kubuntu.
+  * Fix the size of the logo in the upper-left corner for Kubuntu.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Thu, 18 Apr 2024 19:28:02 -0500
+
+calamares-settings-ubuntu (1:24.04.32) noble; urgency=medium
+
+  * Remove the third-party driver installation checkbox from pkgselect, its
+    functionality was not implemented.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Wed, 17 Apr 2024 23:18:12 -0500
+
+calamares-settings-ubuntu (1:24.04.31) noble; urgency=medium
+
+  * Add Kubuntu branding. (LP: #2060845)
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Tue, 16 Apr 2024 12:57:56 -0500
+
+calamares-settings-ubuntu (1:24.04.30) noble; urgency=medium
+
+  * Don't keep lubuntu-snap-installation-monitor installed on the minimal
+    option (LP: #2061318).
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Tue, 16 Apr 2024 10:24:00 -0500
+
+calamares-settings-ubuntu (1:24.04.29) noble; urgency=medium
+
+  [ Aaron Rainbolt ]
+  * Change Kubuntu's Calamares sidebar color.
+
+  [ Walter Lapchynski ]
+  * Remove after_bootloader contextual process. (LP: #2061681)
+
+ -- Walter Lapchynski <wxl@ubuntu.com>  Tue, 16 Apr 2024 01:10:47 +0000
+
+calamares-settings-ubuntu (1:24.04.28) noble; urgency=medium
+
+  * Run apt updates before installing packages. (LP: #2061150) 
+
+ -- Walter Lapchynski <wxl@ubuntu.com>  Sat, 13 Apr 2024 00:44:32 +0000
+
+calamares-settings-ubuntu (1:24.04.27) noble; urgency=medium
+
+  * Run the pkgselect contextualprocesses after packages in Kubuntu and Ubuntu
+    Unity (LP: #2060879)
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 11 Apr 2024 02:49:44 -0500
+
+calamares-settings-ubuntu (1:24.04.26) noble; urgency=medium
+
+  * Make the pkgselect module actually work on Kubuntu and Ubuntu Unity.
+    (LP: #2060879)
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Wed, 10 Apr 2024 16:16:21 -0500
+
+calamares-settings-ubuntu (1:24.04.25) noble; urgency=medium
+
+  * Be completely sure apt will not try to prompt the user.
+  * Bump the timeout limits to 15 minutes for both pkgselect
+    contextualprocess modules.
+  * Allow fixconkeys-part2 a 5 minute window to run, which should be
+    enough to run update-initramfs (LP: #2060429).
+  * Adjust spacers accordingly on no network.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Tue, 09 Apr 2024 03:15:53 -0500
+
+calamares-settings-ubuntu (1:24.04.24) noble; urgency=medium
+
+  * Don't try to remove the nonexistant zram-config package from a Kubuntu
+    installation.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Mon, 08 Apr 2024 21:07:08 -0500
+
+calamares-settings-ubuntu (1:24.04.23) noble; urgency=medium
+
+  * Set GOCACHE to stay within the build directory
+
+ -- Simon Chopin <schopin@ubuntu.com>  Wed, 03 Apr 2024 19:40:50 +0200
+
+calamares-settings-ubuntu (1:24.04.22) noble; urgency=medium
+
+  * Add missing build dependency on golang-go.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Mon, 01 Apr 2024 15:28:24 -0500
+
+calamares-settings-ubuntu (1:24.04.21) noble; urgency=medium
+
+  [ Simon Quigley ]
+  * Revamp pkgselect and enable it for everyone (LP: #2056061).
+  * Wraaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaap.
+  * No-network UX improvements for pkgselect (LP: #2048727).
+
+  [ Aaron Rainbolt ]
+  * Don't try to start Unity after the OEM environment exits on Ubuntu Unity,
+    this has to be done by logging in via LightDM.
+  * Fix a couple of goofs with post-install package purging.
+
+  [ Walter Lapchynski ]
+  * Make links work. (LP: #1981473)
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 28 Mar 2024 23:30:34 -0500
+
+calamares-settings-ubuntu (1:24.04.20) noble; urgency=medium
+
+  * Fix LUKS passphrase unlocker for non-US keyboard layouts.
+  * Disable pkgselect module on Kubuntu, it's not ready for use and wasn't
+    intentionally enabled.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Thu, 21 Mar 2024 13:32:53 -0500
+
+calamares-settings-ubuntu (1:24.04.19) noble; urgency=medium
+
+  * Add Ubuntu Unity configuration. (LP: #2055799)
+  * Disable GeoIP in a couple missed places.
+  * Don't tell the user that they've disabled OEM configuration mode when they
+    chose to not disable it.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Sun, 17 Mar 2024 20:14:00 +0000
+
+calamares-settings-ubuntu (1:24.04.18) noble; urgency=medium
+
+  * GeoIP in welcome module disabled. 
+
+ -- Walter Lapchynski <wxl@ubuntu.com>  Wed, 13 Mar 2024 18:16:06 +0000
+
+calamares-settings-ubuntu (1:24.04.17) noble; urgency=medium
+
+  [ Neal Gompa ]
+  * debian/control: Define the flavor packages as swappable packages
+
+  [ Aaron Rainbolt ]
+  * Wipe Ubuntu Studio's configuration while preserving branding, Studio now
+    uses ubuntu-desktop-provision.
+  * Migrate from users.conf password setting "nonEmpty: true" to
+    "minLength: 1" to enforce non-empty passwords.
+    - This is not a new feature, we had non-empty passwords being enforced in
+      the past and didn't intentionally undo this, but Calamares dropped the
+      "nonEmpty: true" setting we were using.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Sun, 10 Mar 2024 18:10:03 -0500
+
+calamares-settings-ubuntu (1:24.04.16) noble; urgency=medium
+
+  * Actually fix the autologin bug.
+  * Don't kick the user out of first-run configuration mode if they don't
+    complete it the first time around.
+  * Fix a bug that caused the first-run setup wizard to not run even after
+    instructing it to.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Thu, 15 Feb 2024 10:36:34 -0600
+
+calamares-settings-ubuntu (1:24.04.15) noble; urgency=medium
+
+  * Add Lubuntu OEM config.
+  * Fix a bug that could interfere with autologin setup during first-run
+    configuration after an OEM install.
+  * Add a simple wallpaper display engine for the first-run configuration
+    wizard.
+  * Don't run kdialog as root.
+  * Make OEM file cleanup more thorough.
+  * Update copyright file.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Wed, 14 Feb 2024 12:11:34 -0600
+
+calamares-settings-ubuntu (1:24.04.14) noble; urgency=medium
+
+  * Add Kubuntu OEM config.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Wed, 07 Feb 2024 17:02:27 -0600
+
+calamares-settings-ubuntu (1:24.04.13) noble; urgency=medium
+
+  * Add Kubuntu config.
+  * Update Lubuntu config to create an unencrypted /boot partition when
+    encryption is enabled.
+  * Enforce the use of Calamares 3.3.1-0ubuntu3 or later to ensure that needed
+    encryption-related features are present.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Fri, 02 Feb 2024 15:32:10 -0600
+
+calamares-settings-ubuntu (1:24.04.12) noble; urgency=medium
+
+  * Be compliant with the current state of the deb822 Ubuntu implementation
+    specification.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 18 Jan 2024 16:27:43 -0600
+
+calamares-settings-ubuntu (1:24.04.11) noble; urgency=medium
+
+  * Update welcome slide for Noble.
+
+ -- Dan Simmons <kc2bez@lubuntu.me>  Sat, 30 Dec 2023 16:26:04 -0500
+
+calamares-settings-ubuntu (1:24.04.10) noble; urgency=medium
+
+  * Use new icon for Lubuntu's installer, and improve theming.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 23 Dec 2023 18:20:50 -0600
+
+calamares-settings-ubuntu (1:24.04.9) noble; urgency=medium
+
+  * Remove muon from the list of packages to purge when doing a minimal
+    installation, it no longer exists in Noble.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Fri, 08 Dec 2023 01:16:24 +0000
+
+calamares-settings-ubuntu (1:24.04.8) noble; urgency=medium
+
+  * Use lxqt-sudo instead of sudo, to pick up theming.
+  * Even if modules fail, try to perform the unmount.
+  * Explicitly depend on lubuntu-installer-prompt, which provides a default
+    workflow on the live system. Remove this package at the end of the install
+    as well.
+  * Go back to fullscreen.
+  * Add a full installation radio button, and disable the bottom checkboxes if
+    minimal install is selected.
+  * Update snaps used for Krita.
+  * Install the QML file to the proper directory.
+  * Add some testing code to the QML file to make it do what we'd like.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Wed, 22 Nov 2023 18:30:39 -0600
+
+calamares-settings-ubuntu (1:24.04.7) noble; urgency=medium
+
+  * Copy the Calamares installation log file from $HOME rather than /root.
+    (LP: #2044006)
+  * Update a Lintian override now that we're using sudo rather than pkexec to
+    launch Calamares in Lubuntu.
+
+ -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Mon, 20 Nov 2023 12:21:41 -0600
+
+calamares-settings-ubuntu (1:24.04.6) noble; urgency=medium
+
+  * Use sudo -E to launch Calamares so that Lubuntu theming is preserved.
+
+ -- Aaron Rainbolt <arraybolt3@gmail.com>  Sun, 19 Nov 2023 16:26:18 -0600
+
+calamares-settings-ubuntu (1:24.04.5) noble; urgency=medium
+
+  * Fixed an FTBFS on !(amd64).
+
+ -- Aaron Rainbolt <arraybolt3@gmail.com>  Wed, 15 Nov 2023 21:12:05 -0600
+
+calamares-settings-ubuntu (1:24.04.4) noble; urgency=medium
+
+  * Fixed the pkgselect module's CMakeLists.txt file.
+  * Removed some unnecessary path segments from debian/rules.
+  * Unset the executable bit on files that shouldn't be executable.
+  * Exported the LC_ALL=C.UTF-8 and DEB_BUILD_MAINT_OPTIONS = hardening =+all
+    environment variables in debian/rules since we're building a shared
+    library in here now.
+  * Removed trailing whitespace from changelog.
+  * Added some lintian-overrides for the lack of a manual page and an
+    executable Python script in /usr/lib
+
+ -- Aaron Rainbolt <arraybolt3@gmail.com>  Wed, 15 Nov 2023 18:33:39 -0600
+
+calamares-settings-ubuntu (1:24.04.3) noble; urgency=medium
+
+  * Revert a failed FTBFS fix.
+
+ -- Aaron Rainbolt <arraybolt3@gmail.com>  Wed, 15 Nov 2023 17:01:22 -0600
+
+calamares-settings-ubuntu (1:24.04.2) noble; urgency=medium
+
+  * Fix FTBFS on !(amd64).
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Tue, 14 Nov 2023 14:34:09 -0600
+
+calamares-settings-ubuntu (1:24.04.1) noble; urgency=medium
+
+  * Fix Vcs-*.
+  * Add a Package Select module, allowing for fine-tuned customization of the
+    installed system.
+  * Migrate to deb822 sources, removing the sources.list file pre-populated by
+    livecd-rootfs. Main and Universe deb sources are enabled by default,
+    Restricted and Multiverse are opt-in via the installer checkbox.
+  * Welcome to Noble!
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 20 Oct 2023 13:39:32 -0500
+
 calamares-settings-mamolinux (1:23.10.4mamolinux2) stable; urgency=medium
 
   * Fix version in .desktop and update translation (#24)
